# voyeur

./: README.md  docker-compose.yml  test.sh
.github/workflows/: rust.yml
api/: Cargo.toml  Dockerfile  Rocket.toml  test.sh
api/docs/: openapi.yml
api/src/: entries.rs  errors.rs  health.rs  interface.rs  main.rs  model.rs  namespace.rs  pagination.rs  responders.rs  sql.rs
api/src/tests/: create_many_entries.rs  create_one_entry.rs  delete_entry_by_id.rs  get_entry_by_id.rs  get_paginated_entries.rs  health.rs  integration_tests.rs  mod.rs  update_entry_by_id.rs
caddy/: Caddyfile  generate.sh
jupyter/: Dockerfile  config.py
postgres/: Dockerfile  create-tables.sql  docker-compose.yml
