[package]
name = "api"
version = "0.2.5"
authors = ["kittyandrew <kitty@maudrew.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket.git" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", features = ["postgres_pool"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"

